--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.datasource.password=1234
 
 # JPA Settings
 
-# create : 테이블이 없을 경우, 테이블 생성, create-drop : 테스트 환경에 적합, table을 생성하고 종료 후 테이블 drop
+# create : 테이블이 없을 경우, 테이블 생성
+# create-drop : 테스트 환경에 적합, table을 생성하고 종료 후 테이블 drop
 # update : 이미 테이블이 존재하는 상황에서 @Entity에 속성이 추가될 경우, 기본 테이블 데이터에는 변화 없이 새로운 Column을 추가
 # none : 아무것도 하지 않는다.
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # DDL 생성 시 데이터베이스 고유의 기능을 사용하는지에 대한 유무
 spring.jpa.generate-ddl=false
@@ -31,5 +32,8 @@ spring.jpa.properties.hibernate.show_sql=true
 
 # hibernate logging 레벨 설정 (info, debug)
 logging.level.org.hibernate=info
+
+#전체 로그 레벨 설정(기본 info)
+logging.level.root=info
 
 
