--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,7 @@ logging.level.org.hibernate=info
 #전체 로그 레벨 설정(기본 info)
 logging.level.root=info
 
+#application.properties에서 application-oauth.properties를 포함 (설정을 포함한다.)
+spring.profiles.include=oauth
+
 
