--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+	compileOnly 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 test {
