--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,7 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	compileOnly 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	annotationProcessor 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 test {
