--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -21,8 +21,7 @@ spring.jpa.show-sql=true
 # 사용하는 데이터베이스를 지정한다.
 spring.jpa.database=mysql
 
-# Hibernate는 내부적으로 지정되는 DB에 맞게 SQL문을 생성하는 Dialect가 존재한다.
-# Dialect는 Hibernate가 다양한 데이터베이스를 처리하기 위해 각 데이터베이스에 맞는 SQL문법을 처리하기 위해 존재한다.
+# 출력 되는 쿼리 로그를 MySQL버전으로 설정
 # spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # 로깅에 표시되는 SQL을 보기 좋게 표시해줌
