--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ repositories {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
+	implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
