--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,14 @@ repositories {
 dependencies {
 	implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
-	compile('org.springframework.session:spring-session-jdbc')
 	compile('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.springframework.security:spring-security-test")
+
 }
