[수정] MySQL 문법에 맞게 로그 출력하도록 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.database=mysql
 
 # Hibernate는 내부적으로 지정되는 DB에 맞게 SQL문을 생성하는 Dialect가 존재한다.
 # Dialect는 Hibernate가 다양한 데이터베이스를 처리하기 위해 각 데이터베이스에 맞는 SQL문법을 처리하기 위해 존재한다.
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # 로깅에 표시되는 SQL을 보기 좋게 표시해줌
 spring.jpa.properties.hibernate.format_sql=true
