--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
 # 출력 되는 쿼리 로그를 MySQL버전으로 설정
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # 로깅에 표시되는 SQL을 보기 좋게 표시해줌
 spring.jpa.properties.hibernate.format_sql=true
