[설정 변경] 테스트를 위해 update로 잠시 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate=info
 
 #전체 로그 레벨 설정(기본 info)
-logging.level.root=info
+logging.level.root=debug
 
 #application.properties에서 application-oauth.properties를 포함 (설정을 포함한다.)
 spring.profiles.include=oauth
